WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285992
REGRESSION(
288910@main
): Broke the Internal visionOS build
https://bugs.webkit.org/show_bug.cgi?id=285992
Summary
REGRESSION(288910@main): Broke the Internal visionOS build
Jonathan Bedard
Reported
2025-01-15 06:25:57 PST
288910@main
broke the Internal visionOS build in WebFullScreenManager.cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2025-01-15 06:25:58 PST
<
rdar://problem/142964190
>
Jonathan Bedard
Comment 2
2025-01-15 06:26:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39079
EWS
Comment 3
2025-01-15 06:29:40 PST
Committed
288933@main
(2ede482ce645): <
https://commits.webkit.org/288933@main
> Reviewed commits have been landed. Closing PR #39079 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug