REGRESSION(288910@main): Broke the Internal visionOS build https://bugs.webkit.org/show_bug.cgi?id=285992 rdar://142964190

Unreviewed build fix.

* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::WebFullScreenManager::enterFullScreenForElement):

Canonical link: https://commits.webkit.org/288933@main